@@ -12,4 +12,5 @@ import(DBI)
 import(R.utils)
 import(RSQLite)
 import(WriteXLS)
+import(stats)
 import(stringr)
