@@ -1,34 +1,41 @@
 CL	CL_source	Found_muts	Count_mutations	P_values	Q_values	Conf_score	P_value_sig	Q_value_sig	Conf_score_sig
 HT29	CELLMINER	584	619	0	0	100	TRUE	TRUE	TRUE
-SK_MEL_2	CELLMINER	1	921	1	1	0	FALSE	FALSE	FALSE
-EKVX	CELLMINER	1	589	1	1	0	FALSE	FALSE	FALSE
+KM12	CELLMINER	4	3501	7.55815219899691e-07	2.26744565969907e-05	10.69	TRUE	TRUE	FALSE
+HCT_116	CELLMINER	3	3092	0.0713177882437434	1	0	FALSE	FALSE	FALSE
+HCT_15	CELLMINER	2	8289	0.873794443232247	1	0	FALSE	FALSE	FALSE
+HCC_2998	CELLMINER	2	9308	0.719172174724995	1	0	FALSE	FALSE	FALSE
+OVCAR_4	CELLMINER	2	284	0.00263278682273756	0.0526557364547512	2.94	TRUE	FALSE	FALSE
+MOLT_4	CELLMINER	2	4272	0.200529839203185	1	0	FALSE	FALSE	FALSE
+NCI_H226	CELLMINER	2	192	0.39618100512368	1	0	FALSE	FALSE	FALSE
+SK_MEL_2	CELLMINER	1	921	0.789046350442764	1	0	FALSE	FALSE	FALSE
+EKVX	CELLMINER	1	589	0.90467651182778	1	0	FALSE	FALSE	FALSE
+DU_145	CELLMINER	1	2155	0.353111073996308	1	0	FALSE	FALSE	FALSE
+CCRF_CEM	CELLMINER	1	1417	0.861155639916163	1	0	FALSE	FALSE	FALSE
+RPMI_8226	CELLMINER	1	670	0.649511877216335	1	0	FALSE	FALSE	FALSE
+NCI_H23	CELLMINER	1	1040	0.180924893246561	1	0	FALSE	FALSE	FALSE
+TK_10	CELLMINER	1	452	0.994520722087512	1	0	FALSE	FALSE	FALSE
+IGROV1	CELLMINER	1	1080	0.631227366784663	1	0	FALSE	FALSE	FALSE
+K_562	CELLMINER	1	479	0.884804322150494	1	0	FALSE	FALSE	FALSE
+COLO205	CELLMINER	1	313	0.982506329286387	1	0	FALSE	FALSE	FALSE
+MCF7	CELLMINER	1	649	0.950334215061262	1	0	FALSE	FALSE	FALSE
+HS578T	CELLMINER	1	466	0.891762330860049	1	0	FALSE	FALSE	FALSE
+U251	CELLMINER	1	120	0.488438748990383	1	0	FALSE	FALSE	FALSE
+MDA_MB_231	CELLMINER	1	429	0.689530185073853	1	0	FALSE	FALSE	FALSE
+OVCAR_3	CELLMINER	1	273	0.996609155249649	1	0	FALSE	FALSE	FALSE
+PC_3	CELLMINER	1	206	0.994276701887768	1	0	FALSE	FALSE	FALSE
 HL_60	CELLMINER	0	211	1	1	0	FALSE	FALSE	FALSE
-HCT_15	CELLMINER	2	8289	1	1	0	FALSE	FALSE	FALSE
 HOP_62	CELLMINER	0	747	1	1	0	FALSE	FALSE	FALSE
-HCC_2998	CELLMINER	2	9308	1	1	0	FALSE	FALSE	FALSE
-DU_145	CELLMINER	1	2155	1	1	0	FALSE	FALSE	FALSE
-CCRF_CEM	CELLMINER	1	1417	1	1	0	FALSE	FALSE	FALSE
 LOXIMVI	CELLMINER	0	665	1	1	0	FALSE	FALSE	FALSE
-RPMI_8226	CELLMINER	1	670	1	1	0	FALSE	FALSE	FALSE
-KM12	CELLMINER	4	3501	1	1	0	FALSE	FALSE	FALSE
-NCI_H23	CELLMINER	1	1040	1	1	0	FALSE	FALSE	FALSE
-OVCAR_4	CELLMINER	2	284	1	1	0	FALSE	FALSE	FALSE
 MALME_3M	CELLMINER	0	374	1	1	0	FALSE	FALSE	FALSE
-MOLT_4	CELLMINER	2	4272	1	1	0	FALSE	FALSE	FALSE
-TK_10	CELLMINER	1	452	1	1	0	FALSE	FALSE	FALSE
 SN12C	CELLMINER	0	693	1	1	0	FALSE	FALSE	FALSE
-IGROV1	CELLMINER	1	1080	1	1	0	FALSE	FALSE	FALSE
 SK_MEL_5	CELLMINER	0	549	1	1	0	FALSE	FALSE	FALSE
 ACHN	CELLMINER	0	172	1	1	0	FALSE	FALSE	FALSE
 786_0	CELLMINER	0	397	1	1	0	FALSE	FALSE	FALSE
-K_562	CELLMINER	1	479	1	1	0	FALSE	FALSE	FALSE
 OVCAR_5	CELLMINER	0	249	1	1	0	FALSE	FALSE	FALSE
-HCT_116	CELLMINER	3	3092	1	1	0	FALSE	FALSE	FALSE
 T47D	CELLMINER	0	351	1	1	0	FALSE	FALSE	FALSE
 SR	CELLMINER	0	237	1	1	0	FALSE	FALSE	FALSE
 SK_MEL_28	CELLMINER	0	528	1	1	0	FALSE	FALSE	FALSE
 SNB_75	CELLMINER	0	232	1	1	0	FALSE	FALSE	FALSE
-COLO205	CELLMINER	1	313	1	1	0	FALSE	FALSE	FALSE
 A498	CELLMINER	0	263	1	1	0	FALSE	FALSE	FALSE
 CAKI_1	CELLMINER	0	244	1	1	0	FALSE	FALSE	FALSE
 SF_268	CELLMINER	0	278	1	1	0	FALSE	FALSE	FALSE
@@ -38,24 +45,17 @@ SK_OV_3	CELLMINER	0	442	1	1	0	FALSE	FALSE	FALSE
 NCI_H522	CELLMINER	0	331	1	1	0	FALSE	FALSE	FALSE
 NCI_ADR_RES	CELLMINER	0	153	1	1	0	FALSE	FALSE	FALSE
 BT_549	CELLMINER	0	285	1	1	0	FALSE	FALSE	FALSE
-MCF7	CELLMINER	1	649	1	1	0	FALSE	FALSE	FALSE
 HOP_92	CELLMINER	0	119	1	1	0	FALSE	FALSE	FALSE
 UO_31	CELLMINER	0	328	1	1	0	FALSE	FALSE	FALSE
-HS578T	CELLMINER	1	466	1	1	0	FALSE	FALSE	FALSE
 A549	CELLMINER	0	341	1	1	0	FALSE	FALSE	FALSE
 M14	CELLMINER	0	286	1	1	0	FALSE	FALSE	FALSE
-U251	CELLMINER	1	120	1	1	0	FALSE	FALSE	FALSE
-MDA_MB_231	CELLMINER	1	429	1	1	0	FALSE	FALSE	FALSE
 OVCAR_8	CELLMINER	0	65	1	1	0	FALSE	FALSE	FALSE
 SF_539	CELLMINER	0	301	1	1	0	FALSE	FALSE	FALSE
 NCI_H460	CELLMINER	0	435	1	1	0	FALSE	FALSE	FALSE
-OVCAR_3	CELLMINER	1	273	1	1	0	FALSE	FALSE	FALSE
 UACC_257	CELLMINER	0	450	1	1	0	FALSE	FALSE	FALSE
 UACC_62	CELLMINER	0	761	1	1	0	FALSE	FALSE	FALSE
 MDA_MB_435	CELLMINER	0	137	1	1	0	FALSE	FALSE	FALSE
 SF_295	CELLMINER	0	234	1	1	0	FALSE	FALSE	FALSE
-NCI_H226	CELLMINER	2	192	1	1	0	FALSE	FALSE	FALSE
-PC_3	CELLMINER	1	206	1	1	0	FALSE	FALSE	FALSE
 MDA_N	CELLMINER	0	118	1	1	0	FALSE	FALSE	FALSE
 RXF_393	CELLMINER	0	309	1	1	0	FALSE	FALSE	FALSE
 SNB_19	CELLMINER	0	109	1	1	0	FALSE	FALSE	FALSE
